--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>Amal's personal site</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
+
   <body>
     <table cellspacing="20">
       <tr>
@@ -44,7 +46,7 @@
       </tr>
     </table>
 
-    <hr size="3" noshade />
+    <hr />
     <h3>Education</h3>
     <ul>
       <li>
@@ -146,7 +148,7 @@
           <table>
             <tr>
               <td>Passion</td>
-              <td>⏲⏲⏲⏲⏲</td>
+              <td>⌛⌛⌛⌛⌛</td>
             </tr>
             <tr>
               <td>Motivator</td>
